# recipe-healthiness-analyser

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  out.csv  pyproject.toml  recipes.csv
data_analysis/: analysed_recipes.csv  recipe_analysis_report.Rmd  recipes_analysis.r
docs/: recipe_analysis_report.html
recipe_healthiness_analyser/: main.py
recipe_healthiness_analyser/recipe_analyser/: recipe.py  recipe_analyser.py  recipe_analyser_interface.py
recipe_healthiness_analyser/recipe_analyser/constants/: constants.py
recipe_healthiness_analyser/recipe_analyser/nutriscore/: nutrient_types.py  nutriscore_analyser.py  nutriscore_table.json
recipe_healthiness_analyser/recipe_analyser/nutrition/: nutrition_analyser_interface.py  spoonacular_nutrition_analyser.py
recipe_healthiness_analyser/recipe_analyser/nutrition/constants/: api_keys.py  api_requests.py
tests/: conftest.py  recipe-info.json  test_nutriscore_analyser.py  test_nutrition_analyser.py  test_recipe_analyser.py
