[tool.poetry]
name = "recipes-nutriscore"
version = "0.0.1"
description = ""
authors = ["Wouter van Elteren <wvanelteren@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "recipes_nutriscore" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
requests = "^2.28.1"
types-requests = "^2.28.11.1"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pytest-assume = "^2.4.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
black = "^22.8.0"
mypy = "^0.982"
isort = "^5.10.1"
autoflake = "^1.6.1"

[tool.isort]
# make it compatible with black
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
